[package]
name = "dubins_path"
description = "Dubins Path pathfinding algorithm"
version = "0.0.1"
homepage = "https://github.com/gnxlxnxx/dubins_path"
repository = "https://github.com/gnxlxnxx/dubins_path"
documentation = "https://docs.rs/dubins_path"
keywords = ["pathfinder", "dubinspath"]
categories = ["algorithms"]
readme = "README.md"
license = "Apache-2.0/MIT"
authors = ["Roman Kretschmer <gnxlxnxx@web.de>"]
edition = "2018"



[dependencies]
euclid = "0.20.11"
thiserror = "1.0"

[dev-dependencies]
float-cmp = "0.8.0"
